# tcf

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  00_MASTER_PROMPT.md  01_REPO_BOOTSTRAP.md  02_ARCHITECTURE.md  03_CONTENT_PIPELINE.md  04_LEARNER_MODEL.md  05_PRACTICE_AND_DRILLS.md  06_MOCK_EXAM_ENGINE.md  07_AUTO_SCORING_AND_FEEDBACK.md  08_FRONTEND_UX.md  09_QUALITY_AUDIT_AND_LAUNCH.md  404.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTENT_LICENSE  CONTRIBUTING.md  LAUNCH_READINESS_REPORT.md  LEARNER_GUIDE.md  LICENSE  LIMITATIONS.md  Makefile  OPERATIONS.md  PEDAGOGY.md  RATIONALE.md  README.md  RISK_REGISTER.md  SECURITY.md  _config.yml  adrs.md  alembic.ini  feed.xml  index.md  manifest.webmanifest  phase1_audit.md  (+41 more)
.github/workflows/: audit.yml  ci.yml  pages.yml  release.yml
_layouts/: default.html  landing.html
apps/api/: README.md  pyproject.toml
apps/api/src/tcf_accel_api/: __init__.py  diagnostic_pool.py  main.py  mock_exam_pool.py  mock_exam_state.py  session_pool.py  session_state.py  state.py  submission_state.py
apps/api/src/tcf_accel_api/routes/: __init__.py  _stub.py  auth.py  data.py  diagnostic.py  health.py  healthz.py  insights.py  me.py  mock_exam.py  plan.py  session.py  submission.py
apps/api/src/tcf_accel_api/scripts/: __init__.py  export_openapi.py
apps/api/tests/: test_accessibility_routing.py  test_diagnostic_routes.py  test_dismissal_log_persistence.py  test_health.py  test_mock_exam_routes.py  test_plan_routes.py  test_readiness_route.py  test_session_routes.py  test_submission_routes.py  test_v1_stubs.py
apps/web/: .pa11yci  README.md  eslint.config.mjs  lighthouserc.json  middleware.ts  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/.storybook/: main.ts  preview.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/eslint/: no-bare-nclc.js
apps/web/lib/: cn.ts  format.ts  readiness.ts  types.ts
apps/web/lib/api/: keys.ts  (+2 more)
apps/web/messages/: ar.json  en.json  es.json  fr.json  zh.json
apps/web/stories/: CredibleInterval.stories.tsx  ReadinessWidget.stories.tsx  SkillTrajectory.stories.tsx
apps/web/tests/: smoke.test.ts
apps/worker/: README.md  pyproject.toml
apps/worker/src/tcf_accel_worker/: __init__.py  celery_app.py
apps/worker/src/tcf_accel_worker/tasks/: __init__.py  score_ee.py  score_eo.py  score_mock.py  smoke.py
apps/worker/tests/: test_score_ee.py  test_score_eo.py  test_score_mock.py  test_smoke.py
assets/css/: style.css
assets/js/: achievements.js  converter.js  demo.js  extra-drills.js  learn.js  more-drills.js  phrase.js  practice.js  search.js  site.js  tools.js
data/: .gitkeep
data/calibration/: ee.v1.json  ee.v1.report.md  ee.v1.synthetic_silver.jsonl  ee.v1.synthetic_silver.kappa.md
docs/: sample_mock_report.html  sample_mock_report.md
docs/adrs/: 0000-template.md  0001-monorepo-with-uv-and-pnpm.md  0002-postgres-pgvector-over-separate-vector-db.md  0003-fastapi-over-django-or-flask.md  0004-nextjs15-app-router.md  0005-celery-redis-over-rq-dramatiq.md  0006-fsrs6-as-srs-algorithm.md  0007-whisper-large-v3-french-primary-asr.md  0008-camembert-cefr-classifier-over-zero-shot-llm.md  0009-litellm-gateway-with-claude-sonnet-46-default.md  0010-mit-code-cc-by-sa-content-license.md  0011-jsonb-item-content-over-polymorphic-tables.md  0012-precomputed-schedule-cache-over-on-demand.md  0013-online-bayesian-per-skill-with-nightly-irt-refit.md  0014-error-code-taxonomy-stability-promise.md  0015-pgvector-first-qdrant-as-swap-in.md  0016-api-versioning-url-v1-additive-only.md  0017-privacy-default-local-only.md  0018-hybrid-scraped-passage-llm-question-authoring.md  0019-adversarial-distractor-rejection-threshold.md  0020-no-fei-test-material-in-repo.md  0021-synthetic-item-cap-per-module.md  0022-quota-matrix-as-hard-release-gate.md  0023-fsrs6-default-weights-with-per-user-optimization-deferred.md  0024-lector-spacing-bounded-by-fsrs.md  0025-posterior-ci-mandatory-confidence-flag-launch-blocking.md  0026-diagnostic-cat-mcq-rubric-production.md  0027-allocator-overweights-production-skills.md  0028-exam-shape-floor.md  0029-co-single-play-and-lexical-alt.md  0030-default-plan-shadowing-floor.md  0031-pronunciation-signal-coarse-proxy.md  0032-canonical-vs-training-mock-modes.md  0033-mock-cadence-cap.md  0034-drill-mock-posterior-divergence-alert.md  0035-seeded-greedy-selector-not-ortools.md  0036-hybrid-features-llm-calibration-architecture.md  0037-expert-labelled-set-launch-blocking.md  0038-publish-kappa-every-release.md  0039-llm-temperature-and-structured-output.md  (+9 more)
docs/api/: openapi.v1.yaml
docs/roadmap/: v1.1.md
glossary/: index.md
infra/: docker-compose.gpu.yml  docker-compose.yml
infra/initdb/: 01-enable-pgvector.sql
infra/migrations/: README.md  env.py
learn/: index.md
practice/: index.md
scripts/: abandoned_check.py  calibrate.py  check_no_data_commit.py  check_no_todo_docstring.py  download_models.py  eval_kappa.py  generate_clients.py  generate_golden_learner.py  license_check.py  seed_bank.py  windows_dev.ps1
scripts/release/: __init__.py  audit_docs.py  build_release.py  launch_checklist.yaml  sign_audit_report.py
search/: index.md
tests/a11y/: test_drill_specs_a11y.py
tests/capability/: _blocknet.py  test_cloud_backend_requires_env.py  test_no_network_in_default.py
tests/contract/: test_openapi_v1.py
tests/integration/: test_alembic_round_trip.py
tests/lint/: test_no_raw_pron_score_outside_allowlist.py
tests/load/: k6_burst.js  k6_cold_start.js  k6_sustained.js
tests/pedagogy/: golden_learner.jsonl  launch_audit.py  synthetic_cohorts.py  test_drill_diversity.py  test_golden_learner.py  test_perfect_agent_per_drill.py  test_synthetic_cohorts.py
tests/perf/: test_co_timer.py
tests/property/: test_audio_not_persisted_default.py  test_estimator_calibration.py  test_pron_signal_contract.py  test_readiness_invariants.py  test_scheduler_invariants.py
tools/: index.md
try/: index.md
(+66 files in other folders)
