[project]
name = "tcf-accel-api"
version = "0.1.0"
description = "tcf-accel HTTP API (FastAPI). Phase 1 ships /healthz only."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "tcf-accel contributors" }]

dependencies = [
    "tcf-accel-shared",
    "fastapi[standard]>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "orjson>=3.10,<4.0",
    "loguru>=0.7,<1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<1.0",                     # for fastapi.testclient
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcf_accel_api"]

[tool.uv.sources]
tcf-accel-shared = { workspace = true }
