[project]
name = "tcf-accel-worker"
version = "0.1.0"
description = "tcf-accel Celery worker. Phase 1 ships a smoke task only."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "tcf-accel contributors" }]

dependencies = [
    "tcf-accel-shared",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "loguru>=0.7,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcf_accel_worker"]

[tool.uv.sources]
tcf-accel-shared = { workspace = true }
